# Terraining

./: CMakeLists.txt  README.md  Terraining.cpp  Terraining.h
data/: test.json
inc/: Terraining.h
inc/DebugGui/: ManipulableTerrainDebugGui.h  NoiseDebugGui.h  TerrainDebugGui.h
inc/Terrain/: ManipulableTerrain.h  ManipulableTerrainElement.h  TerrainElement.h  TerrainManager.h
raylib-5.5/lib/: raylib.pc
raylibBackend/inc/: Actor.h  Character.h  Drawable.h  Entity.h  Gui.h  GuiManager.h  JSONAdapter.h  MeshEntity.h  MeshObject.h  ModelEntity.h  ModelObject.h  Noise.h  ShaderHandler.h  ThreadPool.h  Updatable.h
raylibBackend/inc/FileAdapters/: FileAdapter.h  JSONAdapter.h  Saveable.h
raylibBackend/src/: Character.cpp  JSONAdapter.cpp  MeshObject.cpp  ModelObject.cpp  Noise.cpp  ShaderHandler.cpp  ThreadPool.cpp
raylibBackend/src/FileAdapters/: FileAdapter.cpp  JSONAdapter.cpp  Saveable.cpp
raylibBackend/src/Gui/: Gui.cpp  GuiManager.cpp
rlImGui/lib/: rlImGui.idb
src/: Terraining.cpp
src/DebugGui/: ManipulableTerrainDebugGui.cpp  NoiseDebugGui.cpp  TerrainDebugGui.cpp
src/Terrain/: ManipulableTerrain.cpp  ManipulableTerrainElement.cpp  TerrainElement.cpp  TerrainManager.cpp
